--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,42 @@
 /*
  * Estilos de tu proyecto
+
  */
+ body{
+ 	margin: 0 auto;
+ 	padding:0 auto;
+ 	width: 100%;
+ 	height: 700px;
+ 	background:linear-gradient(#76278F, #2B1E66);
+ }
+ header{
+ 	width: 100%;
+ 	height: 10px;
+ 	margin: 0 auto;
+ 	font-family:'Montserrat', sans-serif;
+ }
+
+ header nav{
+ 	background: linear-gradient #76278F, #2B1E66;
+ }
+
+ header nav ul{
+ 	list-style: none;
+ }
+
+ header nav li{
+ 	float: right;
+ }
+
+ header nav a{
+ 	padding: 10px, 20px;
+ 	display:block;
+ 	color:#fff;
+ 	text-decoration: none;
+ }
+
+ .logotipo img{
+ 	
+ 	max-width: 60px;
+
+ }
