--- a/css/main.css
+++ b/css/main.css
@@ -1,42 +1,339 @@
-/*
- * Estilos de tu proyecto
+/* objetivo: replicar sitio web Lyft;
+ * Para el presente proyecto se utilizaron los siguientes estilos:
+   propiedades y valores:colores;
+  - Botones, hover: `#FF00BF`-->colores
+  - Fondo de `footer`: `#333447`
+  - Título del formulario: `#352384`
+  - Texto del formulario: `#728099`
+  - Gradiente morado: `linear-gradient(#76278F, #2B1E66);`
+  tipografía:font-family:'Montserrat', sans-serif; 
+
 
  */
+ /*Antes de la barra de menú se posionaron las 
+ imagenés dado que se desconfigura.  
+ */
+
  body{
  	margin: 0 auto;
  	padding:0 auto;
- 	width: 100%;
- 	height: 700px;
- 	background:linear-gradient(#76278F, #2B1E66);
- }
- header{
- 	width: 100%;
- 	height: 10px;
- 	margin: 0 auto;
- 	font-family:'Montserrat', sans-serif;
- }
+	width: 1000px;
+ 	height: 500px;
+ 		
+}
 
- header nav{
- 	background: linear-gradient #76278F, #2B1E66;
- }
+header{
+font-family:'Montserrat', sans-serif;
+background:linear-gradient(#76278F, #2B1E66);
+width: 100%;
 
- header nav ul{
- 	list-style: none;
- }
+}
 
- header nav li{
- 	float: right;
- }
+.imagen1 {
+ padding-right:50px;
+ width: 100px; 
+ margin-right: 50px;
+   
+}
 
- header nav a{
- 	padding: 10px, 20px;
- 	display:block;
- 	color:#fff;
- 	text-decoration: none;
- }
 
  .logotipo img{
+  width: 5%;
+ top:100px;
+ margin-top: -300px;
+ padding-bottom: 600px;
  	
- 	max-width: 60px;
+
+ } 
+ /*Barra de Menú*/
+
+ nav ul{
+	list-style: none;
+	padding: 0;
+	margin: 0;
+	height: 50px;
+	width: 900px;
+	margin-top: -600px;
+
+
+}
+
+nav li{
+	width:50px;
+	display:inline-block;
+	margin-right:50px;
+
+}
+
+nav a{
+	text-decoration: none;
+	color: #fff;
+	font-size: 12px;
+	display: block;
+	padding-left:500px;
+	text-align: center;
+	
+}
+/*section_formulario*/
+
+section{
+	width:600px;
+	height: 300px;
+	background-color:#FFFFFF;
+	font-family:'Montserrat', sans-serif;
+	margin-left: 500px;
+	display: inline-block;
+}
+section div h2{
+	font-family:'Montserrat', sans-serif;
+	font-size: 30px;
+	color:#352384;
+	text-align:center;
+} 
+
+section div h5{
+	font-family:'Montserrat', sans-serif;
+	font-size: 10px;
+	color:#352384;
+	text-align:center;
+}
+
+
+form input{
+	font-family:'Montserrat', sans-serif;
+	font-size: 10px;
+	color: #728099`;
+	margin-bottom: 20px;
+	width: 400px;
+	padding: 10px;
+	box-sizing: border-box;
+	display: block;
+	
+}
+
+input[type="submit"]{
+	margin-bottom:0px;
+	font-family:'Montserrat';
+	font-size: 15px;
+	background-color: #FF00BF;
+	color:#FFFFFF;
+	border-radius:7px;
+	width: 150px;
+	height: 50px;
+}
+
+input[type="submit"].hover{
+  background: #FF00BF;
+}
+
+{
+	font-family:'Montserrat', sans-serif;
+	font-size:15px;
+	color:#728099
+
+}
+
+
+section p{
+	font-family:'Montserrat', sans-serif;
+	font-size:10px;
+	color:#728099;
+}
+
+/*article*/
+
+article{
+font-family:'Montserrat';
+background:linear-gradient(#76278F, #2B1E66);
+width: 100%;
+height: 600px;
+
+}
+
+.gps img{
+	max-width:400px;
+	margin-top: 100px;
+	margin-left: 550px;
+}
+ .enunciado{
+ 	width: 400px;
+ 	margin-top: -400px;
+ 	margin-left: 50px;
+
 
  }
+
+ article div h2{
+ 	font-family:'Montserrat', sans-serif;
+	font-size: 30px;
+	color:#FFFFFF;
+	
+	
+ }
+article div p{
+	font-family:'Montserrat', sans-serif;
+	font-size: 15px;
+	color:#FFFFFF;
+
+/*Primer_video:container;*/	
+	
+}.container{
+	background:#FFFFFF;
+	width: 1000px;
+	height: 400px;
+	
+
+}
+
+iframe{                 /*   */
+	margin-left: 400px;
+}
+
+.titulo{
+	font-size: 20px;
+	color:#000;
+	width: 300px;
+	margin-top: -400px;
+	margin-left: 1px;
+}
+
+div .texto{
+    width: 250px;
+	margin-top:-15px;
+	
+	
+}
+.parrafo{
+	font-family:'Montserrat', sans-serif;
+	font-size: 20px;
+	color:#000;
+
+
+	
+}
+
+/* segundo_video:container1;*/
+.container1{
+	background:#FFFFFF;
+	width: 1000px;
+	height: 400px;
+	
+}
+.titulo2{
+	font-size: 25px;
+	color:#000;
+	width: 250px;
+	margin-top: -35px;
+	margin-left: 650px;
+}
+
+ .parrafo1{
+	font-family:'Montserrat', sans-serif;
+	font-size: 20px;
+	color:#000;
+	width: 300px;
+	margin-left:650px;
+}
+.video{
+	margin-top: -280px;
+	margin-left:-400px;
+}
+/*Tercer_ video:container2;*/ 
+.container2{
+	background:#FFFFFF;
+	width: 1000px;
+	height: 400px;
+	}
+
+.titulo3{
+	font-family:'Montserrat', sans-serif;
+	font-size: 15px;
+	color:#000;
+	width: 250px;
+	margin-top:-320px;
+	margin-left: -4px;
+}	
+
+.parrafo2{
+	font-family:'Montserrat', sans-serif;
+	font-size: 15px;
+	color:#000;
+	width: 250px;
+	margin-left: 0px;
+	
+}
+/*Footer*/
+footer{
+	background-color:#2B1E66;
+ 	width: 1000px;
+	height: 500px;
+	margin-top: -3px;
+	font-family: 'Montserrat', sans-serif;
+	font-size: 15px; 
+	color: #FFFFFF;
+}
+.enunciado h5{
+	font-family: 'Montserrat', sans-serif;
+	font-size: 20px; 
+	color: #FFFFFF;
+	margin:2px;
+	padding: 0px;
+}
+
+.logos img{
+	min-width: 80px;
+	height: 40px;
+} 
+.iconos{
+	width: 50px;
+	text-align: center;
+	display: inline block;
+	margin-left: 500px;
+	margin-top: 80px;
+	color:#FFFFFF;
+	margin-bottom: 5px;
+	
+}
+footer div{
+	display: inline-block;
+	width: 50px;
+	margin-top:20px;
+	margin-left: 100px;
+
+}
+.inc{
+    font-size: 10px; 
+	color: #FFFFFF;
+	text-align: center;
+	margin-top:80px;
+
+}
+hr{
+	width: 400px;
+	height: 0px;
+	background-color: #FFFFFF;
+	text-align: center;
+}
+
+
+
+
+
+
+
+	
+
+
+
+
+
+
+
+	
+
+
+
+
+
+
+ 
